@@ -1,3 +1,8 @@
+2018-04-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
+	Ensure proper EOL handling for Darwin.
+
 2018-03-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-dissect-file-name): Adapt docstring.  (Bug#30904)
